// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  id="inputID-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="inputID"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="inputID-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  id="radio-checked-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
    data-checked=""
  >
    <input
      checked={true}
      className="chakra-radio__input"
      disabled={false}
      id="radio-checked"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      data-checked=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      data-checked=""
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="radio-checked-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  id="radio-required-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
  >
    <input
      aria-required={true}
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="radio-required"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={true}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="radio-required-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  id="radio-invalid-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
    data-invalid=""
  >
    <input
      aria-invalid={true}
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="radio-invalid"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      data-invalid=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      data-invalid=""
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={true}
    id="radio-invalid-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  id="radio-disabled-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
    data-disabled=""
  >
    <input
      aria-disabled={true}
      checked={false}
      className="chakra-radio__input"
      disabled={true}
      id="radio-disabled"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      data-disabled=""
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      data-disabled=""
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="radio-disabled-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  id="jsxLabel-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="jsxLabel"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
      value="arts"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        <div
          className="css-k008qs"
        >
          <span>
            Arts
          </span>
          <div
            className="css-17xejub"
          />
          <span>
            4
          </span>
        </div>
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="jsxLabel-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  id="chakra-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="chakra"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-1dwi2jm"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="chakra-helperText"
  />
</div>
`;

exports[`Radio Button renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="props-wrapper"
>
  <label
    className="chakra-radio css-13p0l12"
  >
    <input
      checked={false}
      className="chakra-radio__input"
      disabled={false}
      id="props"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      required={false}
      style={
        Object {
          "border": "0px",
          "clip": "rect(0px, 0px, 0px, 0px)",
          "height": "1px",
          "margin": "-1px",
          "overflow": "hidden",
          "padding": "0px",
          "position": "absolute",
          "whiteSpace": "nowrap",
          "width": "1px",
        }
      }
      type="radio"
    />
    <span
      aria-hidden={true}
      className="css-14wybg9"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    />
    <span
      className="chakra-radio__label css-1y8kf23"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <span
        className="css-0"
      >
        Test Label
      </span>
    </span>
  </label>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="props-helperText"
  />
</div>
`;
